Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118773

Baking emissive materials without shadow

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.4, 6.6.1, 6.7.0 FF
    • 6.5.4
    • Quick: 3D
    • None
    • Windows
    • b65c17ed3 (dev), 65056ff8c (6.6), b71382466 (tqtc/lts-6.5)

    Description

      I wanted to use model with emissive material in baking. It works well as a "light source" in Lightmap as it should, but I do not want it to cast a shadow. 

      If cast shadow property = false on a model. lightmapper says: 

      Baking process crashed, baking aborted.

       

      QDS project attached as a.zip

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.graphics.and.multimedia Qt Graphics Team
            tetammin Teemu Tamminen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes