Fix lightmapper crash when castsShadow is false

If a model has a BakedLightmap that is enabled, but castsShadows is
false, the lightmapper crashes because of a missing check. Only models
with castsShadows set to true gets their geometry committed to the
RTCScene, which is when they get assigned a geomid. This change adds the
missing check.

Fixes: QTBUG-118773
Pick-to: 6.6 6.5
Change-Id: Ibe440d6a5068dca453053dc2eb22a0b3d51d8542
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>